# fluent-langneg-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: lib.rs  negotiate.rs
examples/: locale.rs  negotiate.rs
scripts/: gen_tables.py
src/: accepted_languages.rs  lib.rs
src/locale/: likely_subtags.rs  mod.rs  options.rs  parser.rs  tables.rs  tinystr.rs
src/negotiate/: likely_subtags.rs  mod.rs
src/negotiation/: mod.rs
tests/: lib.rs
tests/fixtures/: negotiation.json
tests/fixtures/locale/: options-ext.json  parsing-ext.json  parsing.json  serialize-options.json
tests/fixtures/negotiate/filtering/: available-as-range.json  default-locale.json  exact-match.json  likely-subtag-over-region.json  likely-subtag.json  prioritize.json  requested-und.json
tests/fixtures/negotiate/lookup/: main.json
tests/fixtures/negotiate/matching/: main.json
