[package]
name = "fluent-locale"
description = """
A library for language and locale negotiation.
"""
version = "0.8.0"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
homepage = "http://projectfluent.org/"
license = "Apache-2.0"
repository = "https://github.com/projectfluent/fluent-locale-rs"
readme = "README.md"
categories = ["internationalization", "localization"]
edition = "2018"

[badges]
travis-ci = { repository = "projectfluent/fluent-locale-rs" }
coveralls = { repository = "projectfluent/fluent-locale-rs", branch = "master", service = "github" }

maintenance = { status = "actively-developed" }

[dependencies]
unic-langid = "0.5.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unic-langid = { version = "0.5.2", features = ["macros"] }
unic-locale = { version = "0.5", features = ["macros"] }
criterion = "0.3"

[[bench]]
name = "negotiate"
harness = false

[features]
default = []
cldr = ["unic-langid/likelysubtags"]
