[package]
name = "fluent-langneg"
description = """
A library for language and locale negotiation.
"""
version = "0.14.0"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
homepage = "http://projectfluent.org/"
license = "Apache-2.0"
repository = "https://github.com/projectfluent/fluent-langneg-rs"
readme = "README.md"
categories = ["internationalization", "localization"]
edition = "2021"
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md"
]

[badges]
travis-ci = { repository = "projectfluent/fluent-langneg-rs" }
coveralls = { repository = "projectfluent/fluent-langneg-rs", branch = "master", service = "github" }

maintenance = { status = "actively-developed" }

[dependencies]
icu_locid = "1.4"
icu_locid_transform = { version = "1.4", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "negotiate"
harness = false

[features]
default = []
cldr = ["icu_locid_transform"]
